load-balancer.tf



# Load balancer target configuration
resource "aws_lb_target_group" "app" {
  port     = 80
  protocol = "HTTP"
  vpc_id   = aws_vpc.app.id

  health_check {
    path                = "/"
    protocol            = "HTTP"
    matcher             = "200-399"
    interval            = 30
    timeout             = 5
    healthy_threshold   = 2
    unhealthy_threshold = 3
  }
}

# Application load balancer
resource "aws_lb" "app" {
  internal           = false
  load_balancer_type = "application"
  subnets            = values(local.public_subnet_ids)
  security_groups    = [aws_security_group.alb.id]

  depends_on = [
    aws_route_table_association.app_a,
    aws_route_table_association.app_b
  ]
}

resource "aws_lb_listener" "app" {
  load_balancer_arn = aws_lb.app.arn
  port              = 80
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.app.arn
  }

}
